--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ build-backend = "hatchling.build"
 
 [dependency-groups]
 dev = [
+    "isort>=6.0.1",
     "jupyterlab>=4.4.4",
     "matplotlib>=3.10.3",
     "mypy>=1.16.1",
