--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -56,6 +56,7 @@ repos:
           - typer
           - pytest
           - numpy
+          - dotenv
 
   - repo: https://github.com/pycqa/isort
     rev: 5.13.2
