feat: reading h5 dataset

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -57,6 +57,7 @@ repos:
           - pytest
           - numpy
           - dotenv
+          - h5py_stubs
 
   - repo: https://github.com/pycqa/isort
     rev: 5.13.2
