--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ build-backend = "hatchling.build"
 [dependency-groups]
 dev = [
     "h5py-stubs",
+    "ipympl>=0.9.7",
     "isort>=6.0.1",
     "jupyterlab>=4.4.4",
     "matplotlib>=3.10.3",
